# app/Http/Controllers/Admin/CourseTeacher/Abstract/CourseTeacherStudentsController.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Http\Controllers\Admin\CourseTeacher\Abstract;
+
+use App\Http\Controllers\Controller;
+use OpenApi\Attributes as OAT;
+
+#[
+    OAT\PathItem(
+        path: '/admins/course-teachers/{id}/students',
+        parameters: [
+            new OAT\PathParameter(
+                ref: '#/components/parameters/adminsCourseTeacherPathParameterData',
+            ),
+        ],
+    ),
+]
+abstract class CourseTeacherStudentsController extends Controller {}
